# simple-process-mgr

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
simple_process_mgr/: __init__.py  core.py
tests/: test_simple_process_mgr.py
